# wp-migration

./: .gitignore  AGENTS.md  CONCEPT.md  README.md  ROADMAP.md  config.example.yaml  pyproject.toml
src/wp_migration/: cli.py  config.py  db.py  files.py  replace.py  transport.py  wp_config.py
test/: config.test.yaml  docker-compose.yml  run_e2e.py
test/docker/: Dockerfile.wp-ssh  entrypoint.sh
test/wp-source/: wp-config.php
test/wp-target/: wp-config.php
tests/: test_cli.py  test_config.py  test_db.py  test_files.py  test_integration.py  test_replace.py  test_transport.py  test_wp_config.py
