[project]
name = "wp-migration"
version = "0.1.0"
description = "WordPress site migration tool — transfer sites between hosts via FTP/SFTP/SCP + MySQL"
requires-python = ">=3.11"
dependencies = [
    "click",
    "pymysql",
    "paramiko",
    "ftpretty",
    "pyyaml",
    "rich",
]

[project.scripts]
wp-migrate = "wp_migration.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
